--- a/app.json
+++ b/app.json
@@ -38,7 +38,22 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Necesitamps acceso a tus fotpos para armar tu galeria "
+        }
+      ],
+        [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
+        }
       ]
+    
     ],
     "experiments": {
       "typedRoutes": true,
