--- a/app.json
+++ b/app.json
@@ -19,7 +19,12 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.CAMERA"
+      ],
+      "package": "com.jenni_20.trabajo3"
     },
     "web": {
       "output": "static",
@@ -45,7 +50,7 @@
           "photosPermission": "Necesitamps acceso a tus fotpos para armar tu galeria "
         }
       ],
-        [
+      [
         "expo-camera",
         {
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
@@ -53,11 +58,16 @@
           "recordAudioAndroid": true
         }
       ]
-    
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "072d3971-db09-428b-9eef-d55966a78917"
+      }
     }
   }
 }
